# rcb

./: .gitignore  CONTRIBUTING.md  NOTICE.txt  README.md  buildfile  config-init.ps1  config-init.sh  config_init.ps1  config_init.sh  manifest  packages.manifest  repositories.manifest
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
build-configs/: linux-mingw-release.config  windows-llvm-debug.config  windows-llvm-release.config  windows-msvc-debug.config
docs/: AUTHOR.txt  CHANGELOG.txt  CONTRIBUTING.md  DESIGN.md  Notes.txt  QA.md  TODO.txt
overlays/cmake/: CMakeLists.txt  README.md
overlays/make/: Makefile
pkg-managers/pkgng/: +MANIFEST  README.md
rcb/: .gitignore  PACKAGE-README.md  README.md  args.cxx  args.hxx  config_init.ps1  config_init.sh  delete.cxx  delete.hxx  delete_args.cxx  delete_args.hxx  erase.cxx  erase.hxx  erase_args.cxx  erase_args.hxx  list.cxx  list.hxx  list_args.cxx  list_args.hxx  manifest  restore.cxx  restore.hxx  restore_args.cxx  restore_args.hxx  validate.cxx  validate.hxx  validate_args.cxx  validate_args.hxx
rcb-utility/overlays/: README.md
rcb/common/: database.cxx  database.hxx  env.cxx  env.hxx  (+6 more)
submit/: 28d45a3303a0d0a5
trash/: args.cxx  args.hxx  buildfile  delete.cxx  delete.hxx  delete_args.cxx  delete_args.hxx  erase.cxx  erase.hxx  erase_args.cxx  erase_args.hxx  list.cxx  list.hxx  list_args.cxx  list_args.hxx  restore.cxx  restore.hxx  restore_args.cxx  restore_args.hxx  trash.cxx  validate.cxx  validate.hxx  validate_args.cxx  validate_args.hxx
(+158 files in other folders)
